# ml-experiment

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  .travis.yml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.circleci/: config.yml
configs/: HNB_expt_set0.json  LR_expt_set0.json  LR_fruit_expt_savemodel_set0.json  LR_fruit_expt_set0.json  LR_twitter_expt_set0.json  LR_twitter_expt_set0_ipca100.json  LR_twitter_expt_set0_pca400.json
docs/: Makefile  make.bat
docs/source/: conf.py  index.rst
exampledataset/: HRDataset_v13.csv  HRDataset_v13.json  README.md  fruits.json
mlexpt/: cli.py  experiment.py  modelrunio.py
mlexpt/data/: adding_features.py  dataload.py
mlexpt/metrics/: statistics.py
mlexpt/ml/: core.py  models.py
mlexpt/ml/classifiers/: linear.py
mlexpt/ml/encoders/: dictembedding.py  sklearnencoders.py
mlexpt/utils/: caching.py  core.py  datatransform.py  embeddings.py
script/: CSV2JSON  RunExperiments
test/: testConvertListToNDArray.py  test_convert_list_to_NDArray.py
